alignment fixes individual posts

--- a/mati/assets/stylesheets/style.css
+++ b/mati/assets/stylesheets/style.css
@@ -150,7 +150,6 @@ footer a {
 }
 
 .row-individualpost {
-width: 100%;
 padding-left: 30px;
 padding-right: 30px;
 }
@@ -549,7 +548,6 @@ article img {
         min-height: 210px;
         min-width: 300px;
         padding-bottom: 20px;
-        margin-left: 50px;
       }
 
 }
